--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,17 @@
-# このbuildspec.yamlはCodeBuildで上書きされる。
 version: 0.2
-
-phase:
-  build:
-    commands:
-      - echo "Hello, CodeBuild!"
+phases:
+  install:
+    commands:
+      - echo Entered the install phase...
+  pre_build:
+    commands:
+      - echo Entered the pre_build phase...
+  build:
+    commands:
+      - echo Entered the build phase...
+      - echo Build started on `date`
+      - echo "called from codebuild on $Oct 1, 2025." > myartifact.txt
+  post_build:
+    commands:
+      - echo Entered the post_build phase...
+      - echo Build completed on `date`
