--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,25 @@
-name: Hello World
+name: Hello World with Inspector Scan
 on: [push]
 jobs:
   Hello-World-Job:
     runs-on:
-      - codebuild-Case175928201000066GitHubActionsRunner-${{ github.run_id }}-${{ github.run_attempt }}
+      - codebuild-testGitHubActionsRunner-${{ github.run_id }}-${{ github.run_attempt }}
     steps:
-      - run: echo "Hello World"
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Hello World
+        run: echo "Hello World"
+      
+      - name: Inspector Scan
+        uses: aws-actions/vulnerability-scan-github-action-for-amazon-inspector@v1.1.3
+        with:
+          artifact_type: "repository"
+          artifact_path: "./"
+          display_vulnerability_findings: "enabled"
+          critical_threshold: 1
+          high_threshold: 1
+          medium_threshold: 1
+          low_threshold: 1
+          other_threshold: 1
+          scanners: "javascript-nodemodules"
