--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,25 +1,11 @@
-name: Hello World with Inspector Scan
+name: Scan artifact with Amazon Inspector
 on: [push]
 jobs:
-  Hello-World-Job:
-    runs-on:
-      - codebuild-Case175928201000066GitHubActionsRunner-${{ github.run_id }}-${{ github.run_attempt }}
+ daily_job:
+   runs-on:
+    - codebuild-Case175928201000066GitHubActionsRunner-${{ github.run_id }}-${{ github.run_attempt }}
+ your_github_secrets_environment
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Hello World
-        run: echo "Hello World"
-      
-      - name: Inspector Scan
-        uses: aws-actions/vulnerability-scan-github-action-for-amazon-inspector@v1.1.3
-        with:
-          artifact_type: "repository"
-          artifact_path: "./"
-          display_vulnerability_findings: "enabled"
-          critical_threshold: 1
-          high_threshold: 1
-          medium_threshold: 1
-          low_threshold: 1
-          other_threshold: 1
-          scanners: "javascript-nodemodules"
+      - uses: actions/checkout@v3
+      - name: Run local Docker container action
+        uses: ./  # このリポジトリ内のカスタムアクションを呼び出す
