--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,11 @@ jobs:
   Test-Job:
     runs-on:
       - codebuild-Case175928201000066GitHubActionsRunner-${{ github.run_id }}-${{ github.run_attempt }}
+    strategy:
+      matrix:
+        repeat: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10,11,12,13,14,15]  # 15回繰り返し
     steps:
-      - uses: actions/checkout@v3
-      - name: Run local Docker container action
-        uses: ./
+      - name: Pull ECR Public image to test rate limit
+        run: |
+          docker pull public.ecr.aws/docker/library/alpine:3.18
+          echo "Pulled image count ${{ matrix.repeat }}"
