--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,5 +6,10 @@ jobs:
       - codebuild-Case175928201000066GitHubActionsRunner-${{ github.run_id }}-${{ github.run_attempt }}
     steps:
       - uses: actions/checkout@v3
+      
+      - name: Login to ECR
+        run: |
+          aws ecr get-login-password --region ap-northeast-1 | docker login --username AWS --password-stdin 851725590724.dkr.ecr.ap-northeast-1.amazonaws.com
+          
       - name: Run local Docker container action 
         uses: ./
